--- a/css/_styleguide.scss
+++ b/css/_styleguide.scss
@@ -2,7 +2,8 @@
 	height: 200px;
 	width: 200px;
 	padding: 10px;
-	margin: 10px;
-	background-color: red;
+	margin-right: 20px;
+	margin-bottom: 20px;
+	background-color: $gray3;
 	display: inline-block;
 }
